fix vertical alignment of sections without h3's

--- a/assets/stylesheets/resume.scss
+++ b/assets/stylesheets/resume.scss
@@ -124,7 +124,7 @@ a {
       font-weight: normal;
       margin-top: 0;
     }
-    .content h3:first-child {
+    .content :first-child {
       margin-top: 0;
     }
   }
